Fixed badge stretching

--- a/src/app/game/game.component.less
+++ b/src/app/game/game.component.less
@@ -94,6 +94,7 @@ p{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    height: fit-content;
 }
 
 .prediction-badge{
